--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -11,7 +11,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Prefer setup-dotnet to ensure the right runtime/SDK is available
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v4
         with:
@@ -26,8 +25,21 @@ jobs:
         run: |
           set -e
           curl -fsSL -o Il2CppDumper.zip "https://github.com/Perfare/Il2CppDumper/releases/download/v6.7.46/Il2CppDumper-net6-v6.7.46.zip"
+          # sanity check to avoid HTML/tiny downloads
           test $(stat -c%s Il2CppDumper.zip) -gt 100000
           unzip -q Il2CppDumper.zip -d Il2CppDumper
+
+      - name: Download libil2cpp.so (example arm64 from v1.1.2)
+        run: |
+          curl -fsSL -o upload_apk.zip "https://github.com/kaifcodec/Upload_apk/archive/refs/tags/v1.1.2.zip"
+          unzip -q upload_apk.zip
+          cp Upload_apk-1.1.2/lib/arm64-v8a/libil2cpp.so .
+
+      - name: Download global-metadata.dat (your link)
+        run: |
+          curl -fsSL -o global-metadata.dat "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.3/global-metadata.dat"
+          mkdir -p assets/bin/Data/Managed/Metadata
+          mv global-metadata.dat assets/bin/Data/Managed/Metadata/global-metadata.dat
 
       - name: Ensure inputs exist
         run: |
@@ -40,6 +52,7 @@ jobs:
           dotnet Il2CppDumper/Il2CppDumper.dll libil2cpp.so assets/bin/Data/Managed/Metadata/global-metadata.dat --output dumper_output
 
       - name: Upload Dumper Output as Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: Il2CppDumper-Results
