--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Download Il2CppDumper (net6)
         run: |
-          set -e
+           set -e
           curl -fsSL -o Il2CppDumper.zip "https://github.com/Perfare/Il2CppDumper/releases/download/v6.7.46/Il2CppDumper-net6-v6.7.46.zip"
           # sanity check to avoid HTML/tiny downloads
           test $(stat -c%s Il2CppDumper.zip) -gt 100000
@@ -31,9 +31,8 @@ jobs:
 
       - name: Download libil2cpp.so (example arm64 from v1.1.2)
         run: |
-          curl -fsSL -o upload_apk.zip "https://github.com/kaifcodec/Upload_apk/archive/refs/tags/v1.1.2.zip"
-          unzip -q upload_apk.zip
-          cp Upload_apk-1.1.2/lib/arm64-v8a/libil2cpp.so .
+          curl -fsSL -o "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.2/libil2cpp.so"
+          # cp Upload_apk-1.1.2/lib/arm64-v8a/libil2cpp.so .
 
       - name: Download global-metadata.dat (your link)
         run: |
