--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Download Free Fire Max APK (Latest)
         run: |
           # Download latest Free Fire Max APK (arm64-v8a version)
-          curl -fsSL -o freefire-max.apk "https://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=4843654&key=35c69c5b9d8a9f89e1e9e5f5e8e8e8e8&forcedownload=1" || \
+          curl -fsSL -o freefire-max.apk "https://files.catbox.moe/2326p1.apk" || \
           curl -fsSL -o freefire-max.apk "https://github.com/kaifcodec/Upload_apk/releases/download/v1.1.2/freefire-max-latest.apk" || \
           echo "Using fallback method - manual APK required"
 
